RESOLVED FIXED56075
ASSERT_NOT_REACHED triggered in WebCore::mapHTTPPipeliningPriorityToResourceLoadPriority
https://bugs.webkit.org/show_bug.cgi?id=56075
Summary ASSERT_NOT_REACHED triggered in WebCore::mapHTTPPipeliningPriorityToResourceL...
Pratik Solanki
Reported 2011-03-09 23:02:00 PST
The default priority in CFNetwork is 3 which means that a priority was not set. This ends up triggering ASSERT_NOT_REACHED in mapHTTPPipeliningPriorityToResourceLoadPriority and mapResourceLoadPriorityToHTTPPipeliningPriority since we only expect values 0, 1 and 2. We should map 3 to ResourceLoadPriorityUnresolved in WebCore.
Attachments
Patch (1.86 KB, patch)
2011-03-09 23:15 PST, Pratik Solanki
ap: review+
Pratik Solanki
Comment 1 2011-03-09 23:02:31 PST
Pratik Solanki
Comment 2 2011-03-09 23:03:43 PST
Also, this only happens when HTTP pipelining pref is enabled in WebKit.
Pratik Solanki
Comment 3 2011-03-09 23:15:02 PST
Pratik Solanki
Comment 4 2011-03-10 10:15:11 PST
Note You need to log in before you can comment on or make changes to this bug.