2011-03-10  Pratik Solanki  <psolanki@apple.com>

Reviewed by Alexey Proskuryakov.

        ASSERT_NOT_REACHED triggered in WebCore::mapHTTPPipeliningPriorityToResourceLoadPriority
        https://bugs.webkit.org/show_bug.cgi?id=56075

        Map priority value 3, which means no priority, to ResourceLoadPriorityUnresolved.

        * platform/network/cf/ResourceRequestCFNet.h:
        (WebCore::mapHTTPPipeliningPriorityToResourceLoadPriority):
        (WebCore::mapResourceLoadPriorityToHTTPPipeliningPriority):

Canonical link: https://commits.webkit.org/70622@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80734 268f45cc-cd09-0410-ab3c-d52691b4dbfc